--- a/gradle.properties
+++ b/gradle.properties
@@ -6,5 +6,5 @@ author=mrp_v2
 modDisplayName=Additional Colors
 modDescription=Adds colored variants of blocks.
 mapping=snapshot|20201028-1.16.3
-dglAPI=2.0
-dglPatch=0.2
+mrplibAPI=0.1
+mrplibPatch=0.0
