obsidian and actually remove mixin remnants

--- a/build.gradle
+++ b/build.gradle
@@ -113,8 +113,7 @@ jar {
                     'Implementation-Title'    : project.name,
                     'Implementation-Version'  : "${version}",
                     'Implementation-Vendor'   : author,
-                    'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                    'MixinConfigs'            : "${modId}.mixins.json"])
+                    'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")])
     }
 }
 
