adjusted crying obsidian to make things better for additions

--- a/build.gradle
+++ b/build.gradle
@@ -98,11 +98,15 @@ repositories {
             password = new JsonSlurper().parse(new File('../secrets.json')).get('github-packages-token')
         }
     }
+    flatDir {
+        dirs 'libs'
+    }
 }
 
 dependencies {
     minecraft "net.minecraftforge:forge:${mcVersion}-${forgeVersion}"
     compile fg.deobf("mrp_v2.mrplibrary:mrplibrary:${mcVersion}-${mrplibAPI}.${mrplibPatch}-forge")
+    compile fg.deobf("a:ObsidianExpansion-1.16.4:1.0.0")
 }
 
 jar {
