--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
+apply plugin: 'maven-publish'
 String mcVersion = version.split('-')[0]
 if (forgeVersion == 'latest' || forgeVersion == 'recommended')
 {
@@ -150,6 +151,25 @@ processResources {
     }
     from(sourceSets.main.resources.srcDirs) {
         exclude files
+    }
+}
+
+publishing {
+    repositories {
+        maven {
+            name = 'GitHubPackages'
+            url = uri('https://maven.pkg.github.com/mrp-v2/' + capitalizedModId)
+            credentials {
+                username = 'mrp-v2'
+                password = System.getenv('GITHUB_TOKEN')
+            }
+        }
+    }
+    publications {
+        gpr(MavenPublication) {
+            artifactId modId
+            artifact jar
+        }
     }
 }
 
