--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -29,3 +29,9 @@ license="All rights reserved"
     versionRange="[${mcVersion}-${mrplibAPI},${mcVersion}-${mrplibNextAPI})"
     ordering="NONE"
     side="BOTH"
+[[dependencies.${modId}]]
+    modId="obsidianexpansion"
+    mandatory=false
+    versionRange="1.0.1"
+    ordering="NONE"
+    side="BOTH"
