--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 forgeVersion=latest
-version=1.16.4-1.0.0.0-forge-pre2
+version=1.16.4-1.0.0.0-forge
 author=mrp_v2
 modDisplayName=Additional Colors
 modDescription=Adds colored variants of blocks.
