--- a/build.gradle
+++ b/build.gradle
@@ -115,7 +115,9 @@ repositories {
 dependencies {
     minecraft "net.minecraftforge:forge:${mcVersion}-${forgeVersion}"
     compile fg.deobf("mrp_v2.mrplibrary:mrplibrary:${mcVersion}-${mrplibAPI}.${mrplibPatch}-forge")
-    compile fg.deobf("a:ObsidianExpansion-1.16.4:1.0.1")
+    if (new File('libs').exists()){
+        compile fg.deobf("a:ObsidianExpansion-1.16.4:1.0.1")
+    }
 }
 
 jar {
