update mrp Library version

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,10 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 forgeVersion=latest
 minimumForgeVersion=none
-version=1.16.5-1.4.0.0-forge-rc39
+version=1.16.5-1.4.0.0-forge
 author=mrp_v2
 modDisplayName=Additional Colors
 modDescription=Adds colored variants of blocks.
 mapping=snapshot|20201028-1.16.3
-mrpLibVersion=1.16.5-2.0,0.0-forge-rc1
+mrpLibVersion=1.16.5-2.0,0.0-forge
+projectId=430387
