--- a/gradle.properties
+++ b/gradle.properties
@@ -7,5 +7,6 @@ author=mrp_v2
 modDisplayName=Additional Colors
 modDescription=Adds colored variants of blocks.
 mapping=snapshot|20201028-1.16.3
-mrpLibVersion=1.16.5-2.0,0.0-forge
 projectId=430387
+githubDependencies=mrp-v2/mrpLibrary|mrp-library:1.16.5-2.0,0.0-forge;
+curseforgeDependencies=;
