updated to official mappings

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ version=1.16.5-1.4.2.0-forge
 author=mrp_v2
 modDisplayName=Additional Colors
 modDescription=Adds colored variants of blocks.
-mapping=snapshot|20201028-1.16.3
+mapping=official|1.16.5
 projectId=430387
 githubDependencies=mrp-v2/mrpLibrary|mrp-library:1.16.5-2.0,1.0-forge;
 curseforgeDependencies=;
